--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Amrelmalky/React_Ninja_Demo_p",
+  "homepage": "https://Amrelmalky.github.io/React_Ninja_Demo_p",
   "name": "react-bolg",
   "version": "0.1.0",
   "private": true,
